Add wholesaler gallery

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -26,3 +26,4 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "modules/sticky";
 @import "modules/type";
 @import "modules/grid";
+@import "modules/gallery";
