--- a/_scss/modules/_variables.scss
+++ b/_scss/modules/_variables.scss
@@ -1,3 +1,6 @@
 $facebook-color: #3b5999;
 $twitter-color: #55acee;
 $border-radius: .25rem;
+
+$gallery-gutter: 1rem;
+$galery-item-background: #eee;
