--- a/_scss/modules/_type.scss
+++ b/_scss/modules/_type.scss
@@ -5,3 +5,11 @@ html {
 dt {
   font-weight: $font-weight-normal;
 }
+
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  strong {
+    font-weight: 700;
+  }
+}
