Add wholesaler message sending

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -27,3 +27,4 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "modules/type";
 @import "modules/grid";
 @import "modules/gallery";
+@import "modules/is-loading";
