--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1,12 +1,14 @@
 $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 
-@import "../../scaffolding/shoptet/variables-bootstrap";
 @import "../../scaffolding/vendor/bs/scss/functions";
+@import "../../scaffolding/shoptet/variables-bootstrap";
 @import "../../scaffolding/vendor/bs/scss/variables";
+@import "modules/variables-bootstrap";
 @import "../../scaffolding/vendor/bs/scss/mixins";
 @import "../../scaffolding/vendor/bs/scss/utilities";
 @import "../../scaffolding/shoptet/variables-shoptet";
 @import "../../scaffolding/vendor/bs/scss/mixins";
+@import "../../scaffolding/vendor/bs/scss/transitions";
 
 @import '../../scaffolding/vendor/fa/scss/variables';
 @import '../../scaffolding/vendor/fa/scss/core';
@@ -28,3 +30,4 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "modules/grid";
 @import "modules/gallery";
 @import "modules/is-loading";
+@import "modules/filters";
