--- a/_scss/modules/_wholesaler.scss
+++ b/_scss/modules/_wholesaler.scss
@@ -32,6 +32,7 @@
   height: 6rem;
   margin-left: .5rem;
   margin-bottom: .5rem;
+  background-color: $white;
   border: 1px solid $gray-300;
 
   @include media-breakpoint-up(lg) {
@@ -49,4 +50,52 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+}
+
+.wholesaler-tease {
+  display: block;
+  position: relative;
+  padding: 1.3rem 1rem;
+  color: $body-color;
+
+  @include hover-focus {
+    color: $body-color;
+    text-decoration: none;
+    background-color: lighten($shoptet-blue, 46%);
+  }
+}
+
+.wholesaler-tease-title {
+  font-weight: $font-weight-normal;
+  color: $shoptet-blue;
+}
+
+.wholesaler-tease-logo {
+  position: relative;
+  width: 4.2rem;
+  height: 4.2rem;
+  background-color: $white;
+  border: 1px solid $gray-300;
+
+  // object-fit containt alternative
+  img {
+    display: block;
+    max-width: 95%;
+    max-height: 95%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.wholesaler-tease-badges {
+  position: absolute;
+  top: .5rem;
+  left: .5rem;
+}
+
+.wholesaler-tease-description {
+  font-weight: 300;
+  color: $body-color;
 }
