--- a/_scss/modules/_wholesaler.scss
+++ b/_scss/modules/_wholesaler.scss
@@ -55,6 +55,7 @@
 .wholesaler-tease {
   display: block;
   position: relative;
+  height: 100%;
   padding: 1.3rem 1rem;
   color: $body-color;
 
@@ -72,8 +73,8 @@
 
 .wholesaler-tease-logo {
   position: relative;
-  width: 4.2rem;
-  height: 4.2rem;
+  width: 5rem;
+  height: 5rem;
   background-color: $white;
   border: 1px solid $gray-300;
 
@@ -87,6 +88,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+}
+
+.wholesaler-tease-logo-empty {
+  background-color: $gray-200;
+  border-color: $gray-200;
 }
 
 .wholesaler-tease-badges {
