Move archive breadcrumbs

--- a/_scss/modules/_wholesaler.scss
+++ b/_scss/modules/_wholesaler.scss
@@ -66,6 +66,12 @@
   }
 }
 
+.wholesaler-archive {
+  .breadcrumb {
+    margin-top: 0;
+  }
+}
+
 .wholesaler-tease-title {
   font-weight: $font-weight-normal;
   color: $shoptet-blue;
