Add dropdown menu to logged in user

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -10,6 +10,7 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "../../scaffolding/vendor/bs/scss/mixins";
 @import "../../scaffolding/vendor/bs/scss/transitions";
 @import "../../scaffolding/vendor/bs/scss/custom-forms";
+@import "../../scaffolding/vendor/bs/scss/dropdown";
 
 @import '../../scaffolding/vendor/fa/scss/variables';
 @import '../../scaffolding/vendor/fa/scss/core';
