Add banner to wholesaler archive

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -40,3 +40,4 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "modules/post-thumbnail";
 @import "modules/testimonial-thumbnail";
 @import "modules/section";
+@import "modules/post-banner";
