--- a/_scss/modules/_hero.scss
+++ b/_scss/modules/_hero.scss
@@ -1,13 +1,13 @@
 .hero {
   padding: 4rem 0;
-  background-color: $primary;
+  background-color: $secondary;
 }
 
 .hero-title {
   margin: 0 auto;
   color: $white;
   text-align: center;
-  max-width: 40rem;
+  max-width: 30rem;
   font-weight: 200;
 }
 
