Add map with wholesaler location

--- a/_scss/modules/_wholesaler.scss
+++ b/_scss/modules/_wholesaler.scss
@@ -116,3 +116,13 @@
   font-weight: 300;
   color: $body-color;
 }
+
+.wholesaler-map {
+  height: 15rem;
+
+  // Reset image styles
+  img {
+    max-width: none;
+    vertical-align: baseline;
+  }
+}
