--- a/_scss/modules/_wholesaler.scss
+++ b/_scss/modules/_wholesaler.scss
@@ -52,6 +52,10 @@
   }
 }
 
+.wholesaler-badges {
+  @include clearfix;
+}
+
 .wholesaler-tease {
   display: block;
   position: relative;
@@ -108,8 +112,13 @@
 
 .wholesaler-tease-badges {
   position: absolute;
-  top: .5rem;
-  left: .5rem;
+  top: .7rem;
+  left: .4rem;
+
+  @include media-breakpoint-up(lg) {
+    top: .5rem;
+    left: .5rem;
+  }
 }
 
 .wholesaler-tease-description {
