--- a/_scss/modules/_post-banner.scss
+++ b/_scss/modules/_post-banner.scss
@@ -2,7 +2,7 @@
   display: block;
   padding: 1.25rem;
   border-radius: $border-radius;
-  background-color: $gray-100;
+  background-color: #f2f2f2;
 }
 
 .post-banner-image {
