Fix wholesaler gallery backgroud

--- a/_scss/modules/_gallery.scss
+++ b/_scss/modules/_gallery.scss
@@ -36,7 +36,7 @@
     display: block;
     height: 0;
     padding-bottom: 100%;
-    background-color: $galery-item-background;
+    border: 1px solid $gray-300;
   }
 
   img {
