--- a/_scss/modules/_list.scss
+++ b/_scss/modules/_list.scss
@@ -21,6 +21,15 @@
 
 }
 
+.dl-inline {
+  display: inline-block;
+
+  dt, dd {
+    display: inline-block;
+    margin-bottom: 0;
+  }
+}
+
 .list-horizontal {
 
   > li {
@@ -35,5 +44,18 @@
       width: percentage(1/3);
       padding-right: 2rem;
     }
+  }
+}
+
+.list-comma {
+  padding-left: 0;
+  margin-bottom: 0;
+
+  > li {
+    display: inline;
+  }
+
+  > li:not(:last-of-type):after {
+    content: ', ';
   }
 }
