--- a/_scss/modules/_wholesaler.scss
+++ b/_scss/modules/_wholesaler.scss
@@ -40,15 +40,8 @@
     height: 8rem;
   }
 
-  // object-fit containt alternative
   img {
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include object-fit-containt;
   }
 }
 
@@ -93,15 +86,8 @@
     height: 7rem;
   }
 
-  // object-fit containt alternative
   img {
-    display: block;
-    max-width: 95%;
-    max-height: 95%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include object-fit-containt(95%);
   }
 }
 
