--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -47,3 +47,4 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "modules/post-banner";
 @import "modules/button";
 @import "modules/special-offer";
+@import "modules/owl-carousel";
