Change color of recet special offers on homepage

--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -5,3 +5,6 @@ $border-radius: .25rem;
 
 $gallery-gutter: 1rem;
 $galery-item-background: #eee;
+
+$primary-light: lighten($primary, 46%);
+$secondary-light: lighten($secondary, 47%);
