--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -48,3 +48,4 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "modules/button";
 @import "modules/special-offer";
 @import "modules/owl-carousel";
+@import "modules/background";
