--- a/_scss/modules/_row-status.scss
+++ b/_scss/modules/_row-status.scss
@@ -1,5 +1,5 @@
 .row-status {
   padding: 1.7rem 0;
-  background-color: lighten($secondary, 47%);
+  background-color: $white;
   text-align: center;
 }
