Fix carousel when few items present

--- a/_scss/modules/_owl-carousel.scss
+++ b/_scss/modules/_owl-carousel.scss
@@ -23,6 +23,12 @@
 
 }
 
+// Center carousel items
+.owl-stage {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .owl-nav {
   font-size: 400%;
 }
