Add product detail template

--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -4,6 +4,7 @@ $instagram-color: #e4405f;
 $border-radius: .25rem;
 
 $gallery-gutter: 1rem;
+$gallery-small-gutter: .5rem;
 $galery-item-background: #eee;
 
 $primary-light: lighten($primary, 46%);
