--- a/_scss/modules/_font-size.scss
+++ b/_scss/modules/_font-size.scss
@@ -20,3 +20,19 @@
 .fs-120 {
   font-size: 120%;
 }
+
+.fs-125 {
+  font-size: 125%;
+}
+
+.fs-130 {
+  font-size: 130%;
+}
+
+.fs-140 {
+  font-size: 140%;
+}
+
+.fs-150 {
+  font-size: 150%;
+}
