--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -24,6 +24,7 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "mixins";
 
 @import "modules/wholesaler";
+@import "modules/product";
 @import "modules/badge";
 @import "modules/list";
 @import "modules/fontawesome";
