--- a/_scss/modules/_list.scss
+++ b/_scss/modules/_list.scss
@@ -59,3 +59,11 @@
     content: ', ';
   }
 }
+
+.list-bordered {
+  border-top: 1px solid #e5e5e5;
+}
+
+.list-bordered-item {
+  border-bottom: 1px solid #e5e5e5;
+}
