--- a/_scss/modules/_special-offer.scss
+++ b/_scss/modules/_special-offer.scss
@@ -12,8 +12,12 @@
   display: block;
   position: relative;
   height: 100%;
-  padding: 1rem;
+  padding: 1rem 0;
   color: $body-color;
+
+  @include media-breakpoint-up(lg) {
+    padding: 1rem;
+  }
 
   @include hover-focus {
     color: $body-color;
