--- a/_scss/modules/_product.scss
+++ b/_scss/modules/_product.scss
@@ -11,6 +11,14 @@
   border-top: 1px solid $gray-300;
 }
 
+.product-image {
+  display: block;
+  width: auto;
+  max-height: 23rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .product-tease {
   display: block;
   position: relative;
