Add search form switching select

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -50,3 +50,4 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "modules/special-offer";
 @import "modules/owl-carousel";
 @import "modules/background";
+@import "modules/input-group";
