Fix owl carousel item image size

--- a/_scss/modules/_owl-carousel.scss
+++ b/_scss/modules/_owl-carousel.scss
@@ -8,6 +8,12 @@
   .owl-stage {
     display: flex; // stretch child items
   }
+
+  .owl-item {
+    img {
+      width: auto;
+    }
+  }
 }
 
 .owl-carousel-bordered {
