Add custom search form to header

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -51,3 +51,4 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "modules/owl-carousel";
 @import "modules/background";
 @import "modules/input-group";
+@import "modules/header";
