Add bordered row for 3 columns

--- a/_scss/modules/_grid.scss
+++ b/_scss/modules/_grid.scss
@@ -12,14 +12,18 @@
       border-top: 1px solid #e5e5e5;
     }
 
+  }
+}
+
+.row-bordered-2-columns {
+  > [class*="col-"] {
+
     @include media-breakpoint-up(lg) {
       &:nth-of-type(-n+2) {
         border-top: 1px solid #e5e5e5;
       }
-    }
 
-    &:not(:nth-child(2n)) {
-      @include media-breakpoint-up(lg) {
+      &:not(:nth-child(2n)) {
         border-right: 1px solid #e5e5e5;
       }
     }
@@ -27,23 +31,32 @@
   }
 }
 
-.row-bordered-one-row {
-
+.row-bordered-3-columns {
   > [class*="col-"] {
-    border-bottom: 1px solid #e5e5e5;
 
-    @include media-breakpoint-up(lg) {
-      border-top: 1px solid #e5e5e5;
-      border-left: 1px solid #e5e5e5;
+    @include media-breakpoint-up(md) {
+      &:nth-of-type(-n+2) {
+        border-top: 1px solid #e5e5e5;
+      }
+
+      &:not(:nth-child(2n)) {
+        border-right: 1px solid #e5e5e5;
+      }
     }
-  }
 
-  > [class*="col-"]:first-child {
-    border-top: 1px solid #e5e5e5;
+    @include media-breakpoint-up(xl) {
+      &:nth-of-type(-n+3) {
+        border-top: 1px solid #e5e5e5;
+      }
 
-    @include media-breakpoint-up(lg) {
-      border-left: 0;
+      &:not(:nth-child(2n)) {
+        border-right: none;
+      }
+
+      &:not(:nth-child(3n)) {
+        border-right: 1px solid #e5e5e5;
+      }
     }
+
   }
-  
 }
