Add block ellipsis utility

--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -9,3 +9,4 @@ $galery-item-background: #eee;
 
 $primary-light: lighten($primary, 46%);
 $secondary-light: lighten($secondary, 47%);
+$secondary-lighter: lighten($secondary, 53%);
