--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -51,3 +51,4 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "modules/background";
 @import "modules/input-group";
 @import "modules/header";
+@import "modules/block-ellipsis";
