--- a/_scss/modules/_product.scss
+++ b/_scss/modules/_product.scss
@@ -19,6 +19,13 @@
   margin-right: auto;
 }
 
+.product-price-block {
+  padding: 1.5rem 1rem;
+  border: 1px solid $gray-300;
+  border-radius: $border-radius;
+  background-color: lighten($shoptet-blue, 47%);
+}
+
 .product-tease {
   display: block;
   position: relative;
