Add age test modal window

--- a/_scss/_variables-bootstrap.scss
+++ b/_scss/_variables-bootstrap.scss
@@ -14,3 +14,8 @@ $custom-checkbox-indicator-icon-checked:        str-replace(url("data:image/svg+
 $btn-padding-x:               1.5rem;
 $btn-padding-y-lg:            1.15rem;
 $btn-padding-x-lg:            1.9rem;
+
+$modal-dialog-margin:               3rem;
+$modal-dialog-margin-y-sm-up:       3rem;
+$modal-backdrop-opacity:            .7;
+$modal-content-border-radius:       none;
