--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -12,6 +12,7 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "../../scaffolding/vendor/bs/scss/custom-forms";
 @import "../../scaffolding/vendor/bs/scss/dropdown";
 @import "../../scaffolding/vendor/bs/scss/buttons";
+@import "../../scaffolding/vendor/bs/scss/modal";
 
 @import '../../scaffolding/vendor/fa/scss/variables';
 @import '../../scaffolding/vendor/fa/scss/core';
