--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -53,3 +53,4 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "modules/input-group";
 @import "modules/header";
 @import "modules/block-ellipsis";
+@import "modules/operator-form";
