--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -49,3 +49,4 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "modules/special-offer";
 @import "modules/owl-carousel";
 @import "modules/background";
+@import "modules/contact-person";
