Add tree structure

--- a/_scss/modules/_filters.scss
+++ b/_scss/modules/_filters.scss
@@ -10,3 +10,23 @@
   height: 1px;
   background-color: lighten($shoptet-blue, 35%);
 }
+
+.filters-list {
+  a {
+    color: $body-color;
+
+    @include hover-focus {
+      text-decoration: none;
+    }
+  }
+
+  > ul > li > ul {
+    font-size: 85%;
+    padding-bottom: .5rem;
+  }
+
+  > ul ul {
+    padding-top: 0rem;
+  }
+
+}
