--- a/_scss/modules/_block-ellipsis.scss
+++ b/_scss/modules/_block-ellipsis.scss
@@ -1,5 +1,5 @@
 .block-ellipsis {
-  max-height: (2 * $line-height-base * 16px);
+  max-height: (2 * $line-height-base * 1em);
   overflow: hidden;
 
   p {
