--- a/_scss/modules/_operator-form.scss
+++ b/_scss/modules/_operator-form.scss
@@ -45,7 +45,7 @@
 
 .operator-form-label-heading {
   label {
-    font-family: 'Libre Franklin', sans-serif;
+    font-family: $headings-font-family;
     font-size: $h4-font-size;
   }
 }
