--- a/_scss/modules/_list.scss
+++ b/_scss/modules/_list.scss
@@ -61,9 +61,9 @@
 }
 
 .list-bordered {
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid $border-color;
 }
 
 .list-bordered-item {
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid $border-color;
 }
