--- a/_scss/modules/_special-offer.scss
+++ b/_scss/modules/_special-offer.scss
@@ -1,7 +1,7 @@
 .special-offer-detail {
   padding: 1.3rem 0;
-  border-top: 1px solid #e5e5e5;
-  border-bottom: 1px solid #e5e5e5;
+  border-top: 1px solid $border-color;
+  border-bottom: 1px solid $border-color;
 
   & + .special-offer-detail {
     border-top: 0;
