Sync production with master branch (#31)
* Set imported products to pending

* Disable to import csv if no publish wholesaler

* Update CSV import success message

* Break products importing if number of products exceeded only for subscribers

* Import images to gallery

* Add async product image downloading

* Set imported product to pending status

* Fix related wholesaler

* Add product sync status

* Update product columns

* Add product sync state to admin edit page

* Add notice about sync images while product import

* Update notice text

* Fix large CSV file upload

* Change cron interval

* Log sync stats

* Add age test modal window

* Add age test to archive and taxonomy pages

* Exclude adult items from homepage

* Exclude adult items from archive page when no category selected

* Log some errors to sentry

* Show adult items with adult test pop-up while searching

* Add link to reporting illegal content

* Update link to reporting illegal content

* Fix product import validation

* Update mandatory attributes while product import

* Move link to reporting illegal content bellow product description

* Add admin notice with link to csv import

* Move link to reporting illegal content

* Make the first capital letter only if the entire product name is capitalized

* Add better CSV import file validation

* Temporary disable product location filters

* Add operator form

* Update operator form

* Fix prev commit

* Fix prev commit

* Update registration token query

* Update operator form

* Update operator form

* Update wholesaler registration form

* Update operator form

* Remove redundant code

* WIP: google porduct categories import

* Update operator form

* WIP: Update google products migration

* Change operator form field

* Download logo from external companies

* Fix operator form

* Finalize google product category migration

* Complete google prod

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -15,11 +15,14 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "../../scaffolding/vendor/bs/scss/modal";
 
 @import '../../scaffolding/vendor/fa/scss/variables';
+@import '../../scaffolding/vendor/fa/scss/mixins';
 @import '../../scaffolding/vendor/fa/scss/core';
 @import '../../scaffolding/vendor/fa/scss/list';
 @import '../../scaffolding/vendor/fa/scss/icons';
-@import '../../scaffolding/vendor/fa/scss/fa-brands';
-@import '../../scaffolding/vendor/fa/scss/fa-regular';
+@import '../../scaffolding/vendor/fa/scss/brands';
+@import '../../scaffolding/vendor/fa/scss/regular';
+
+@import "../../scaffolding/shoptet/dropdown";
 
 @import "variables";
 @import "mixins";
@@ -48,9 +51,9 @@ $fa-font-path: "../../../scaffolding/vendor/fa/webfonts";
 @import "modules/section";
 @import "modules/post-banner";
 @import "modules/button";
-@import "modules/special-offer";
 @import "modules/background";
 @import "modules/input-group";
 @import "modules/header";
 @import "modules/block-ellipsis";
 @import "modules/operator-form";
+@import "modules/contact-person";
