--- a/_scss/modules/_list.scss
+++ b/_scss/modules/_list.scss
@@ -67,3 +67,48 @@
 .list-bordered-item {
   border-bottom: 1px solid $border-color;
 }
+
+.list-tree {
+  &, ul {
+    list-style: none;
+    margin: 0 0 0 .3rem;
+    padding: 0;
+  }
+
+  li {
+    position: relative;
+    margin: 0;
+    border-left:1px solid $primary;
+    padding-left: .8rem;
+    line-height: 1.2;
+    padding-bottom: .5rem;
+  }
+
+  li:first-child {
+   padding-top: .5rem;
+
+   &::before {
+    top: .2rem;
+   }
+  }
+
+  li:last-child {
+    border-left: none;
+    padding-bottom: 0;
+  }
+
+  li::before {
+    content: '';
+    position: absolute;
+    top: -.35rem;
+    left: 0;
+    height: 1em;
+    width: 9px;
+    border-bottom: 1px solid $primary;
+    display: inline-block;
+  }
+
+  li:last-child::before {
+    border-left: 1px solid $primary;
+  }
+}
