--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -10,3 +10,5 @@ $galery-item-background: #eee;
 $primary-light: lighten($primary, 46%);
 $secondary-light: lighten($secondary, 47%);
 $secondary-lighter: lighten($secondary, 53%);
+$gold: #ffc200;
+$gold-light: lighten($gold, 39%);
